# adminApp/src/routes/lookup.route.js
@@ -6,8 +6,8 @@ const router = express.Router(); // eslint-disable-line new-cap
 const lookupCtrl = require("../controllers/lookup.controller");
 
 
-router.route("/getCountrylist").post(lookupCtrl.getCountry);
-router.route("/getStatelistByCountryId").post(lookupCtrl.getStateByCountryId);
-router.route("/getCitylistByStateId").post(lookupCtrl.getCityByStateId);
+router.route("/getCountrylist").post(lookupCtrl.getCountrylist);
+router.route("/getStatelistByCountryId").post(lookupCtrl.getStatelistByCountryId);
+router.route("/getCitylistByStateId").post(lookupCtrl.getCitylistByStateId);
  
 module.exports = router;
